--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,13 +32,14 @@ format:
     toc: true
     code-fold: true
     css: hide-elements.css
-    include-in-header:
-      text: |
-        <meta name="keywords" content="AI news, Machine Learning, LLMs, AI Agents, AI Ethics, Technology News, Robo AI Digest">
-        <link rel="canonical" href="https://roboaidigest.com/">
-        <meta property="og:image" content="https://roboaidigest.com/social-share.png">
-        <meta property="og:type" content="article">
-        <meta name="twitter:image" content="https://roboaidigest.com/social-share.png">
+    canonical-url: true
+    header-includes: |
+      <meta name="keywords" content="AI news, Machine Learning, LLMs, AI Agents, AI Ethics, Technology News, Robo AI Digest">
+      <meta name="robots" content="index, follow">
+      <meta name="googlebot" content="index, follow">
+      <meta property="og:image" content="https://roboaidigest.com/social-share.png">
+      <meta property="og:type" content="article">
+      <meta name="twitter:image" content="https://roboaidigest.com/social-share.png">
     title-block-categories: false
     title-block-style: plain
 
