--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,12 @@ format:
 editor: visual
 
 header-includes: |
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-WR6KBLTV');</script>
+  <!-- End Google Tag Manager -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6KBLTV" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <!-- Klaro Cookie Consent - CSS -->
   <link rel="stylesheet" href="https://cdn.kiprotect.com/klaro/v0.7/klaro.css"/>
   <!-- Klaro Cookie Consent - Konfiguracja -->
