Fix: add inline CSS for thumbnails to override Quarto inline styles

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,16 @@ format:
 editor: visual
 
 header-includes: |
+  <style>
+  .listing-item img, .thumbnail-image, .card-img-top, img.card-img {
+    border-radius: 0 !important;
+    height: 220px !important;
+    min-height: 220px !important;
+    width: 100% !important;
+    object-fit: cover !important;
+    border-bottom: 1px solid #30363d;
+  }
+  </style>
   <!-- Google Consent Mode v2 - musi być PRZED GTM -->
   <script>
     window.dataLayer = window.dataLayer || [];
