--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,10 +26,10 @@ website:
 
 format:
   html:
-    theme: [cosmo, styles.css]
+    theme: cosmo
+    css: [styles.css, hide-elements.css]
     toc: true
     code-fold: true
-    css: hide-elements.css
     canonical-url: true
     title-block-categories: false
     title-block-style: plain
@@ -38,6 +38,7 @@ format:
 editor: visual
 
 header-includes: |
+  <link rel="stylesheet" href="styles.css">
   <!-- Google Consent Mode v2 - musi być PRZED GTM -->
   <script>
     window.dataLayer = window.dataLayer || [];
