--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,7 +38,20 @@ format:
 editor: visual
 
 header-includes: |
-  <link rel="stylesheet" href="styles.css">
+  <style>
+  /* Force dark mode */
+  :root {
+    --bs-body-bg: #0d1117;
+    --bs-body-color: #e6edf3;
+  }
+  body {
+    background-color: #0d1117 !important;
+    color: #e6edf3 !important;
+  }
+  .quarto-post, .card, .quarto-grid-item {
+    background-color: #161b22 !important;
+  }
+  </style>
   <!-- Google Consent Mode v2 - musi być PRZED GTM -->
   <script>
     window.dataLayer = window.dataLayer || [];
