Fix: JS removes inline height from thumbnails

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,14 @@ format:
 editor: visual
 
 header-includes: |
+  <script>
+  // Remove inline height from thumbnail images
+  document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('.thumbnail-image').forEach(function(img) {
+      img.style.height = '';
+    });
+  });
+  </script>
   <style>
   /* Force dark mode */
   :root {
