--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,8 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme:
+      dark: cosmo
     css: [styles.css, hide-elements.css]
     toc: true
     code-fold: true
