--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,6 +65,7 @@ header-includes: |
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-WR6KBLTV');</script>
   <!-- End Google Tag Manager -->
   <meta name="author" content="Robo AI Digest">
+  <meta name="description" content="Daily AI news and insights on LLMs, AI Agents, Machine Learning breakthroughs and cutting-edge technology. Stay ahead with Robo AI Digest.">
   <meta name="robots" content="index, follow">
 
 include-before-body-text: |
