Add nofollow filter - automatic rel=nofollow for external links

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,8 @@ format:
     title-separator: " | "
     include-before-body: includes/after-body.html
     date-format: "YYYY-MM-DD HH:mm"
+    filters:
+      - filters/nofollow.lua
 
 editor: visual
 
